--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 .body {
-    font-family: 'Roboto', sans-serif;
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -9,6 +8,7 @@
 
 * {
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 .top {
@@ -18,7 +18,7 @@
 }
 
 .header {
-    height: 500px;
+    height: 420px;
     background-color: #1f2937;
     padding: 0 200px 0 200px;
 }
@@ -28,28 +28,71 @@
 }
 
 .logo   {
-    font-size: 30px;
-    color: white;
+    font-size: 24px;
+    color: #F9FAF8;
 }
 
 a {
     text-decoration: none;
-    color: white;
+    margin-left: 15px;
+    color: #E5E7EB;
 }
 
 .title {
-    font-size: 40px;
+    font-size: 48px;
     font-weight: 900;
-    color: aliceblue;
+    color: #F9FAF8;
+    margin: 0;
 }
 
 .main {
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    height: 300px;
+    gap: 20px;
+}
+
+.text, .header-links {
+    color: #E5E7EB;
+    font-size: 14px;
 }
 
 .landscape {
-    width: 450px;
+    width: 400px;
     flex: auto;
 }
 
+.sign-up {
+    background-color: #3882f6;
+    border-radius: 5px;
+    padding: 5px 20px 5px 20px;
+    border-style: none;
+    color: #E5E7EB;
+}
+
+.second {
+    display: flex;
+    justify-content: space-around;
+}
+
+.subtitle {
+    display: flex;
+    justify-content: center;
+    margin: 30px;
+    font-size: 36px;
+    font-weight: 600;
+    color: #1f2937;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.square {
+    width: 150px;
+    flex:auto;
+    border-radius: 10px;
+}
